# KotlinShuttle

./: CODE_OF_CONDUCT.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: index.ts  stores.ts
src/lib/components/: CodeEditor.svelte  Icon.svelte  OutputPane.svelte  SideBar.svelte
src/lib/types/: Output.ts
src/routes/: +layout.svelte  +page.svelte
